--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 
 .ipynb_checkpoints/demo_pyusm-checkpoint.ipynb
 .ipynb_checkpoints/demo_usm_entropy-checkpoint.ipynb
+.ipynb_checkpoints/demo_usm_make-checkpoint.ipynb
