refactor usm_make module
CGR class renamed to USM and usm_make function renamed to make_usm() and shifted to be a classmethod for instantiating the USM class.
Common subroutines shared by both make_usm() and cgr2d() were split into three helper functions: checkalphabet, getalphabetcoords, and coord_dict_make, which is copied from the USM class method of the same name.

Have only incorporated these new functions into make_usm(). After running testing to confirm behavior is unchanged, will incorporate them into cgr2d and test again.

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 .ipynb_checkpoints/demo_pyusm-checkpoint.ipynb
 .ipynb_checkpoints/demo_usm_entropy-checkpoint.ipynb
 .ipynb_checkpoints/demo_usm_make-checkpoint.ipynb
+doc/.ipynb_checkpoints/demo_usm-checkpoint.ipynb
+doc/.ipynb_checkpoints/demo_usm_entropy-checkpoint.ipynb
