--- a/doc/_config.yml
+++ b/doc/_config.yml
@@ -3,7 +3,7 @@ title: Documentation of pyusm Package
 author: Katherine Wuestney
 only_build_toc_files: true
 execute:
-  execute_notebooks: force
+  execute_notebooks: cache
 
 repository:
   url: https://github.com/katherine983/pyusm
