--- a/.gitignore
+++ b/.gitignore
@@ -170,3 +170,4 @@ cython_debug/
 pyusm.egg-info/PKG-INFO
 pyusm.egg-info/requires.txt
 pyusm.egg-info/PKG-INFO
+pyusm/__pycache__/usm.cpython-39.pyc
