add cgr_plot class

--- a/.gitignore
+++ b/.gitignore
@@ -178,3 +178,4 @@ pyusm.egg-info/PKG-INFO
 pyusm/__pycache__/usm.cpython-39.pyc
 doc/manuscript2_figures.ipynb
 *.pyc
+pyusm/__pycache__/__init__.cpython-39.pyc
